refactor: Order 계층 간 DTO 분리 및 주문 생성 로직 리팩토링 완료 (Red-Green-Ref)
- Domain: 정적 팩토리 메서드 제거, `new Order(userId)` + `addLine(...)` 조합으로 주문/주문항목 생성
- Application: `OrderLine` DTO 도입, `OrderService.create()`에서 목록 검증 및 DTO→엔티티 변환 로직 구현
- Facade/Controller: `OrderCommand`→`OrderLine` 매핑 정리, 레이어 간 의존성 분리
- Test: 단위·통합 테스트 전면 수정—`Order.create()` 호출 대신 `addLine()` 기반 더미 객체 생성, 불필요한 스태빙 제거